WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48099
[GTK] Menu list buttons do not react properly to CSS styling
https://bugs.webkit.org/show_bug.cgi?id=48099
Summary
[GTK] Menu list buttons do not react properly to CSS styling
Martin Robinson
Reported
2010-10-21 16:27:06 PDT
There are a couple issues with menu list buttons. The first is that they ignore many important CSS properties like width, height, and padding. In particular, the GTK+ values override any padding set on the widget. The second issue is that when certain CSS properties are set, WebKit falls back rendering via calls to adjustMenuListButtonStyle and paintMenuListButton (versus adjustMenuListStyle and paintMenuList). This distinction is for the benefit of the Mac port, which tries to render Aqua-themed controls whenever possible. At the current time, we always render GTK+-themed controls, so we can ignore the split and implement both similarly.
Attachments
Patch for this issue
(90.49 KB, patch)
2010-10-21 17:53 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-10-21 17:53:11 PDT
Created
attachment 71516
[details]
Patch for this issue
Xan Lopez
Comment 2
2010-10-22 06:00:30 PDT
Comment on
attachment 71516
[details]
Patch for this issue View in context:
https://bugs.webkit.org/attachment.cgi?id=71516&action=review
Seems sensible.
> WebCore/ChangeLog:5 > + [GTK] Menu list buttons do react properly to CSS styling
Is there a 'not' missing here or am I missing something?
Martin Robinson
Comment 3
2010-10-23 08:29:46 PDT
Comment on
attachment 71516
[details]
Patch for this issue Clearing flags on attachment: 71516 Committed
r70391
: <
http://trac.webkit.org/changeset/70391
>
Martin Robinson
Comment 4
2010-10-23 08:29:50 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 5
2010-10-23 10:10:40 PDT
http://trac.webkit.org/changeset/70391
might have broken GTK Linux 64-bit Debug The following tests are not passing: transforms/2d/zoom-menulist.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug