2010-10-23  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        [GTK] Menu list buttons do react properly to CSS styling
        https://bugs.webkit.org/show_bug.cgi?id=48099

        Rebaseline menu list button tests and add pixel results. There
        are still issues with padding around separators, but these will
        be fixed in a further patch.

        * platform/gtk/editing/selection/select-box-expected.txt:
        * platform/gtk/fast/forms/menulist-clip-expected.checksum: Added.
        * platform/gtk/fast/forms/menulist-clip-expected.png: Added.
        * platform/gtk/fast/forms/menulist-clip-expected.txt: Added.
        * platform/gtk/fast/forms/menulist-deselect-update-expected.checksum: Added.
        * platform/gtk/fast/forms/menulist-deselect-update-expected.png: Added.
        * platform/gtk/fast/forms/menulist-deselect-update-expected.txt: Added.
        * platform/gtk/fast/forms/menulist-narrow-width-expected.checksum: Added.
        * platform/gtk/fast/forms/menulist-narrow-width-expected.png: Added.
        * platform/gtk/fast/forms/menulist-narrow-width-expected.txt: Added.
        * platform/gtk/fast/forms/menulist-no-overflow-expected.checksum: Added.
        * platform/gtk/fast/forms/menulist-no-overflow-expected.png: Added.
        * platform/gtk/fast/forms/menulist-no-overflow-expected.txt: Added.
        * platform/gtk/fast/forms/menulist-option-wrap-expected.checksum: Added.
        * platform/gtk/fast/forms/menulist-option-wrap-expected.png: Added.
        * platform/gtk/fast/forms/menulist-option-wrap-expected.txt: Added.
        * platform/gtk/fast/forms/menulist-restrict-line-height-expected.checksum: Added.
        * platform/gtk/fast/forms/menulist-restrict-line-height-expected.png: Added.
        * platform/gtk/fast/forms/menulist-restrict-line-height-expected.txt: Added.
        * platform/gtk/fast/forms/menulist-separator-painting-expected.checksum: Added.
        * platform/gtk/fast/forms/menulist-separator-painting-expected.png: Added.
        * platform/gtk/fast/forms/menulist-separator-painting-expected.txt: Added.
        * platform/gtk/fast/forms/menulist-style-color-expected.checksum: Added.
        * platform/gtk/fast/forms/menulist-style-color-expected.png: Added.
        * platform/gtk/fast/forms/menulist-style-color-expected.txt: Added.
        * platform/gtk/fast/forms/menulist-width-change-expected.checksum: Added.
        * platform/gtk/fast/forms/menulist-width-change-expected.png: Added.
        * platform/gtk/fast/forms/menulist-width-change-expected.txt: Added.
2010-10-23  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Menu list buttons do react properly to CSS styling
        https://bugs.webkit.org/show_bug.cgi?id=48099

        Correct the way that menu list buttons get their necessary padding from
        GTK+. Instead of resetting the padding to these values, return them via
        the popupInternalPadding* methods. Add implementations for *MenuListButton*
        methods.

        * platform/gtk/RenderThemeGtk.cpp:
        (WebCore::getComboBoxPadding): Added.
        (WebCore::RenderThemeGtk::popupInternalPaddingLeft): Added.
        (WebCore::RenderThemeGtk::popupInternalPaddingRight): Added.
        (WebCore::RenderThemeGtk::popupInternalPaddingTop): Added.
        (WebCore::RenderThemeGtk::popupInternalPaddingBottom): Added.
        (WebCore::RenderThemeGtk::adjustMenuListStyle): Do not reset CSS
        properties, instead rely on the poupInternalPadding* methods.
        (WebCore::RenderThemeGtk::adjustMenuListButtonStyle): Added.
        (WebCore::RenderThemeGtk::paintMenuListButton): Added.
        * platform/gtk/RenderThemeGtk.h: Added new method declarations.

Canonical link: https://commits.webkit.org/60928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70391 268f45cc-cd09-0410-ab3c-d52691b4dbfc